# bike-availability-data-science-full

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
capstone/: capstone_guidelines.md  capstone_starter.ipynb  grading_rubric.md
data/: README.md
data/processed/: README.md
data/raw/: README.md  sample_bike_weather.csv
docs/: LEARNER_EXPERIENCE_IMPROVEMENTS.md  README_NAVIGATION.md  code_snippets.md  coding_standards.md  dependency_management.md  experiment_best_practices.md  installation_profiles.md  model_documentation_guidelines.md  open_data_sources.md  python_version_setup.md  reporting_template.md  setup_google_colab.md  setup_script_guide.md
notebooks/: README.md  example_data_exploration.ipynb  notebook_template.ipynb
notebooks/Module_01_Introduction/: M1_01_project_overview.ipynb  M1_02_environment_setup.ipynb  M1_03_open_data_sources.ipynb  M1_04_sample_data_exploration.ipynb  README.md
notebooks/Module_02_Data_Acquisition/: README.md
notebooks/Module_03_Exploration_Profiling/: README.md
notebooks/Module_04_Feature_Engineering/: README.md
notebooks/Module_05_Modeling/: README.md
notebooks/Module_06_Validation_Governance/: README.md
notebooks/Module_07_Visualization/: README.md
notebooks/Module_08_Automation/: README.md
notebooks/Module_09_Experimentation/: README.md
notebooks/Module_10_Collaboration/: README.md
src/: data_acquisition.py  evaluation.py  feature_engineering.py  generate_sample_data.py  modeling.py  preprocessing.py  visualization.py
