[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-availability-data-science"
version = "1.0.0"
description = "End-to-end data science project for predicting bike availability in bike-sharing systems"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Course Authors", email = "course@example.com"}
]
keywords = [
    "data-science",
    "machine-learning",
    "bike-sharing",
    "prediction",
    "education",
    "open-data"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    # Core Data Science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.43.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    
    # Data Acquisition
    "requests>=2.31.0",
    
    # Data Profiling
    "ydata-profiling>=4.6.0",
    
    # Experiment Tracking
    "mlflow>=2.9.0",
    
    # Automation
    "papermill>=2.5.0",
    "ipywidgets>=8.1.0",
    
    # Dashboard
    "streamlit>=1.29.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=23.12.0",
    "pylint>=3.0.0",
    "flake8>=7.0.0",
    "mypy>=1.7.0",
    "pydocstyle>=6.3.0",
    "bandit>=1.7.5",
    "isort>=5.13.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    
    # Notebook Tools
    "nbqa>=1.7.0",
    "nbconvert>=7.12.0",
    
    # Performance Profiling
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
    "jupyter-contrib-nbextensions>=0.7.0",
]

all = [
    "bike-availability-data-science[dev,jupyter]",
]

[project.urls]
Homepage = "https://github.com/vinculum3141-ship-it/bike-availability-data-science-full"
Documentation = "https://github.com/vinculum3141-ship-it/bike-availability-data-science-full#readme"
Repository = "https://github.com/vinculum3141-ship-it/bike-availability-data-science-full"
Issues = "https://github.com/vinculum3141-ship-it/bike-availability-data-science-full/issues"

[project.scripts]
generate-sample-data = "src.generate_sample_data:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

# ═══════════════════════════════════════════════════════════
# Black Configuration (Code Formatting)
# ═══════════════════════════════════════════════════════════
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ═══════════════════════════════════════════════════════════
# Pylint Configuration
# ═══════════════════════════════════════════════════════════
[tool.pylint.main]
py-version = "3.9"
ignore-paths = [
    "^.venv/.*$",
    "^build/.*$",
    "^dist/.*$",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (for notebook style code)
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pylint.format]
max-line-length = 88

# ═══════════════════════════════════════════════════════════
# MyPy Configuration (Type Checking)
# ═══════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # More relaxed for educational code
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════
# Pytest Configuration
# ═══════════════════════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# ═══════════════════════════════════════════════════════════
# Coverage Configuration
# ═══════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
